--- a/admin/css/styles.css
+++ b/admin/css/styles.css
@@ -347,6 +347,22 @@ th {
     height: 2.8em; /* 2 lines * line-height */
 }
 
+table th, table td {
+    vertical-align: middle !important;
+    font-size: 14px;
+}
+
+.table thead th {
+    background-color: #343a40;
+    color: #fff;
+    font-weight: 600;
+}
+
+.table-hover tbody tr:hover {
+    background-color: #f1f1f1;
+}
+
+
 .action-buttons {
     display: flex;
     flex-direction: column;
