--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -68,6 +68,42 @@
 .about_bg_1{
     background-image: url(../img/banner/about_banner.png);
 }
+.about_bg_2{
+    background-image: url(../img/banner/about_banner_2.png);
+}
+.about_bg_3{
+    background-image: url(../img/banner/about_banner3.png);
+}
+.about_bg_4{
+    background-image: url(../img/banner/about_banner4.png);
+}
+.about_bg_5{
+    background-image: url(../img/banner/about_banner5.png);
+}
+.about_bg_6{
+    background-image: url(../img/banner/about_banner6.png);
+}
+.about_bg_7{
+    background-image: url(../img/banner/about_banner7.png);
+}
+.about_bg_8{
+    background-image: url(../img/banner/about_banner8.png);
+}
+.about_bg_9{
+    background-image: url(../img/banner/about_banner9.png);
+}
+.about_bg_10{
+    background-image: url(../img/banner/about_banner10.png);
+}
+.about_bg_11{
+    background-image: url(../img/banner/about_banner11.png);
+}
+.about_bg_12{
+    background-image: url(../img/banner/about_banner12.png);
+}
+.about_bg_13{
+    background-image: url(../img/banner/about_banner13.png);
+}
 .about_info_area{
     padding-left: 387px;
     margin-top: 50px;
