--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -62,11 +62,11 @@
                        display: inline-block;
 
                        a{
-                        color: #A8A7A0;
+                        color: #ffffff;
                         margin: 0 10px;
                         font-size: 15px;
                         &:hover{
-                            color: #fff;
+                            color: #dcdbda;
                         }
                        }
                    }
