--- a/css/styles.css
+++ b/css/styles.css
@@ -38,8 +38,6 @@
   margin-top: 20;
 }
 
-
-
 .room-info-bar {
             background-color: #f0f8ff; /* Light blue background */
             padding: 20px;
@@ -77,3 +75,16 @@
                 align-items: flex-start;
             }
         }
+
+        .bradcam_area {
+    padding-bottom: 0 !important;
+    margin-bottom: 0 !important;
+}
+
+.about_area {
+    padding: 30px 0 60px 0 !important; /* top, right, bottom, left */
+}
+.about_area h2 {
+    margin-top: 0 !important;
+}
+
