--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -108,11 +108,11 @@
                     display: inline-block;
     
                     a{
-                     color: #A8A7A0;
+                     color: #ffffff;
                      margin: 0 10px;
                      font-size: 15px;
                      &:hover{
-                         color: #fff;
+                         color: #d3d3d3bd;
                      }
                     }
                 }
